--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "validatorjs",
+  "name": "js-validator",
   "version": "1.1.2",
-  "npmName": "validatorjs",
   "main": "./src/validator.js",
   "filename": "./dist/validator.min.js",
   "description": "A laravel-styled JavaScript Object/Form/JSON validation library.",
